see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note
 
30-Jul-2010 Louis Landry
 # [21576] Language switcher don't affect document language - sef routing issue

30-Jul-2010 Jean-Marie Simonet
 # [#21588] Readonly calendar field pops up. Thanks Roland
 # [#20628] Titles of hidden fields are shown in module edit page, menu edit page, article edit page. Thanks Artyom.
 $ Correcting some inis. Deleted redundant one.
 
29-Jul-2010 Mark Dexter
# Remove trashed category from sample data

29-Jul-2010 Ian MacLennan
 # [#21605] Change committed without appropriately modifying system tests.

29-Jul-2010 Jean-Marie Simonet
 # [#21619] Normalizing menu items sliders to be more explicit over the UI
 # [#21618] Modal CSS various issues, mostly related to bluestork loading media/system/css/adminlist.css. Thanks Matt & Angie.

28-Jul-2010 Ian MacLennan
 # [#21361] Contact Component (Category Contact List-No Query)
 # [#21553] "Add Site Name to Page Titles" does not work in Atom and RSS feeds
 # [#21559] Joomla! Form Field Checkboxes
 # [#21473] Remove garbage output from system test classes
 # [#21521] JSessionStorage*::test() should be static
 # [#21520] JSession::getStores() should be static
 # [#21518] Only variables should be assigned by reference in JCategories->setParent()
 # [#21539] Extraneous edit_params.php in banner view
 # [#21544] The a element in JButtonHelp->fetchButton is not well-formed
 # [#21555] Fields of type=media do not have an obvious way to clear the data
 # [#21602] Preventing saving same alias in same category
 # [#20690] Call to undefined method JRegistry::loadSetupFile()
 # [#21283] System test article0001 failing