@@ -7,9 +7,9 @@
 MOD_LOGIN="Login"
 MOD_LOGIN_FIELD_GREETING_DESC="Show/Hide the simple greeting text"
 MOD_LOGIN_FIELD_GREETING_LABEL="Show Greeting"
-MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_DESC="Select the page the user will be redirected to after a successful login. Select from all the pages listed in the dropdown menu. If no selection is made, the home page will be loaded by default."
+MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_DESC="Select the page the user will be redirected to after a successful login. Select from all the pages listed in the dropdown menu. Choosing "_QQ_"Default"_QQ_" will load the default home page for that language."
 MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_LABEL="Login Redirection Page"
-MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_DESC="Select the page the user will be redirected to after successfully ending their current session by logging out. Select from all the pages listed in the dropdown menu. If no selection is made, the home page will be loaded by default."
+MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_DESC="Select the page the user will be redirected to after successfully ending their current session by logging out. Select from all the pages listed in the dropdown menu. Choosing "_QQ_"Default"_QQ_" will load the default home page for that language."
 MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_LABEL="Logout Redirection Page"
 MOD_LOGIN_FIELD_NAME_DESC="Displays name or username after logging"
 MOD_LOGIN_FIELD_NAME_LABEL="Show Name/Username"
